# UCL-Research-Project

./: README.md  Week1.ipynb  Week1.py  afactor_msv.ipynb  chap2.ipynb  k_step_ahead_prediction_mwe.ipynb  pyproject.toml  stochastic_volatility_models.ipynb
1d case/: 1d.py  1d_hmc all3.ipynb  1d_hmc copy.ipynb
2d case/: 2d_pipeline 0.7corr copy.ipynb  model7 0.7corr copy.ipynb
Week1/: 1d_hmc all3.ipynb  1d_hmc copy.ipynb  1d_hmc.ipynb  1d_pipeline.ipynb  1d_pipeline.py  Week1.ipynb  Week1.py
week 2/: 2d_pipeline 0.7corr copy.ipynb  2d_pipeline 0corr.ipynb  2d_pipeline copy.ipynb  2d_pipeline.ipynb  beta.ipynb  model8.ipynb  model8.py
